Fix some layout problems

--- a/src/BlobPage/BlobPage.css
+++ b/src/BlobPage/BlobPage.css
@@ -7,6 +7,7 @@
   top: var(--navbar-height);
   margin-top: 2rem;
   width: 100%;
+  left: 0;
 }
 
 .o-blob-button {
